BLKJK-017 | Izzi | Refactoring